--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,11 @@
     <string name="change">Change</string>
     <string name="selectText">Select</string>
     <string name="cancelText">Cancel</string>
+    <string name="settings">Settings</string>
+    <string name="sort_contacts_by">Sort Contacts By:</string>
+    <string name="name">Name</string>
+    <string name="sort_order">Sort Order:</string>
+    <string name="ascending">Ascending</string>
+    <string name="descending">Descending</string>
 
 </resources>
